[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dq_llm"
version = "0.1.0"
description = "dq_llm  is a lightweight, flexible API wrapper that integrates multiple Large Language Models (LLMs) like OpenAI, Azure, Ollama, and more. It provides a unified interface for chat completion, embeddings, and streaming responses, allowing developers to easily switch between various LLM services with minimal configuration."
readme = "README.rst"
authors = [
  {name = "shiva kharbanda", email = "shivakharbanda21@gmail.com"}
]
maintainers = [
  {name = "shiva kharbanda", email = "shivakharbanda21@gmail.com"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/shivakharbanda/dq_llm/issues"
changelog = "https://github.com/shivakharbanda/dq_llm/blob/master/changelog.md"
homepage = "https://github.com/shivakharbanda/dq_llm"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

